--- a/movies.html
+++ b/movies.html
@@ -2,10 +2,14 @@
 <table> 
   <tr><th> frozen </th>
     <th> cartoon </th>
-    <th> US </th> </tr>
+    <th> US </th> 
+  </tr>
   <tr> <td> toy story </td> 
     <td> adventure </td>
-    <td> UK </td> </tr>
+    <td> UK </td>
+  </tr>
   <tr> <td> titanic  </td> 
     <td> tragety </td>
-    <td> UK </td> </tr>
+    <td> UK </td> 
+  </tr>
+  </table> 
