--- a/movies.html
+++ b/movies.html
@@ -27,7 +27,7 @@ tr:nth-child(even) {
     <td> UK </td>
   </tr>
   <tr> <td> titanic  </td> 
-    <td> tragety </td>
+    <td> tragedy </td>
     <td> UK </td> 
   </tr>
   </table> 
